[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
env_logger = "0.11.3"
tokio = {version="1.38.0", features=["full"]}
tracing = "0.1.40"
sqlx = {version="0.7.4", features=["runtime-tokio-rustls", "any", "sqlite"]}
anyhow = "1.0.86"
rand = "0.8.5"
thiserror = "1.0.62"
serde = "1.0.204"
mime = "0.3.17"
serde_json = "1.0.121"
validator = { version="0.18.1", features=["derive"] }
http-body = "1.0.1"
tower-http = {version="0.5.2", features=["full"]}
